[package]
name = "a1o760r8onpuh86ik20swyo0ok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
serde = "1.0.136"
serde_derive = "1.0.136"
serde-csv-extra = "0.2.0"
csv = "1.1.6"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
anyhow = "1.0.56"
rust_decimal = "1.23.1"
dashmap = "5.2.0"
thiserror = "1.0.30"

[dev-dependencies]
rand = "0.8.5"